[WIP] Added improvements to Print and Pinterest icons, Use SVG instead of img

--- a/src/__mixins.scss
+++ b/src/__mixins.scss
@@ -78,6 +78,8 @@
             font-family: $google-font-family;
             text-transform: $text-transform;
             @include margin( 0 0 15px );
+            padding: 0;
+            background-color: transparent;
         }
     }
 }
