--- a/src/wpzoom-blocks/recipe-card/skins/simple/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple/style.scss
@@ -34,46 +34,78 @@
                     line-height: 1.8;
                 }
             }
-            .wpzoom-recipe-card-print-link,
-            .wpzoom-recipe-card-pinit {
+            .wpzoom-recipe-card-pinit,
+            .wpzoom-recipe-card-print-link {
                 display: inline-block;
                 vertical-align: middle;
-
-                .btn-print-link,
+            }
+            .wpzoom-recipe-card-pinit {
+                margin-right: $grid-unit-15;
                 .btn-pinit-link {
                     display: block;
                     border-radius: 3px;
-                    padding: 7px 10px;
+                    padding: $grid-unit $grid-unit-10;
                     font-style: normal;
                     text-decoration: none;
-                    font-size: 12px;
+                    font-size: $ultra-small-font-size;
                     color: #fff;
-                    line-height: 1.2;
+                    line-height: $default-line-height;
                     border: none;
                     box-shadow: none;
                     cursor: pointer;
-
-                    .icon-print-link,
-                    .icon-pinit-link {
-                        font-size: 18px;
-                        margin-right: 5px;
-                        vertical-align: middle;
-                    }
-                    .icon-print-link + span,
-                    .icon-pinit-link + span {
-                        font-size: 14px;
-                        vertical-align: middle;
-                    }
-                }
-                .btn-print-link {
-                    background-color: $simple-primary-color;
-                }
-                .btn-pinit-link {
                     background-color: #C62122;
+                    .wpzoom-rcb-icon-pinit-link {
+                        display: inline-block;
+                        margin-right: $grid-unit;
+                        width: 16px;
+                        height: 16px;
+                        vertical-align: middle;
+                        fill: #fff;
+                    }
+                    .wpzoom-rcb-pinit-icon {
+                        font-size: $ultra-font-size;
+                        margin-right: calc(#{ $grid-unit-15 / 2 });
+                        vertical-align: middle;
+                    }
+                    .wpzoom-rcb-pinit-icon + span {
+                        font-size: $small-font-size;
+                        vertical-align: middle;
+                    }
                 }
             }
-            .wpzoom-recipe-card-pinit {
-                margin-right: 10px;
+            .wpzoom-recipe-card-print-link {
+                .btn-print-link {
+                    display: block;
+                    border-radius: 3px;
+                    padding: $grid-unit $grid-unit-10;
+                    font-style: normal;
+                    text-decoration: none;
+                    font-size: $ultra-small-font-size;
+                    color: #fff;
+                    line-height: $default-line-height;
+                    border: none;
+                    box-shadow: none;
+                    cursor: pointer;
+                    color: $simple-primary-text-color;
+                    background-color: $simple-primary-color;
+                    .wpzoom-rcb-icon-print-link {
+                        display: inline-block;
+                        margin-right: $grid-unit;
+                        width: 16px;
+                        height: 16px;
+                        vertical-align: middle;
+                        fill: $simple-primary-text-color;
+                    }
+                    .wpzoom-rcb-print-icon {
+                        font-size: $ultra-font-size;
+                        margin-right: calc(#{ $grid-unit-15 / 2 });
+                        vertical-align: middle;
+                    }
+                    .wpzoom-rcb-print-icon + span {
+                        font-size: $small-font-size;
+                        vertical-align: middle;
+                    }
+                }
             }
         }
         .recipe-card-along-image {
