[WIP] Added Rating Stars color for Accent Color Header design

--- a/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
@@ -180,6 +180,8 @@
             }
         }
         .recipe-card-details {
+            padding-bottom: 15px;
+            border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
             .details-items {
                 font-size: 0;
                 text-align: center;
