[WIP] Fixed some styles for Accent Color Header

--- a/src/wpzoom-blocks/recipe-card/editor.scss
+++ b/src/wpzoom-blocks/recipe-card/editor.scss
@@ -332,6 +332,12 @@
 		margin-top: 0;
 		margin-bottom: 10px;
 	}
+	&.is-style-accent-color-header {
+		 p.description {
+		 	color: #efefef;
+		 	opacity: 1;
+		 }
+	}
 	.components-icon-button .dashicon + .components-icon-button-text {
 		margin-left: 5px;
 	}
