--- a/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
@@ -67,6 +67,9 @@
             border-bottom: 1px solid rgba(0,0,0,.1);
             border-bottom-left-radius: 15px;
             border-bottom-right-radius: 15px;
+            &:empty {
+                padding: 0;
+            }
         }
 
         &:not(.recipe-card-noimage) {
