--- a/src/wpzoom-blocks/recipe-card/skins/simple/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/simple/style.scss
@@ -14,6 +14,26 @@
             background-color: $coconut-cream;
         }
 
+        &.header-content-align-right {
+            .recipe-card-image {
+                float: right;
+                text-align: right;
+            }
+            .recipe-card-along-image {
+                float: left;
+                text-align: right;
+            }
+            .recipe-card-heading,
+            .recipe-card-details {
+                margin-right: 20px;
+                margin-left: 0;
+            }
+            .details-items .detail-item {
+                margin-right: 0;
+                margin-left: 15px;
+            }
+        }
+
         .recipe-card-image {
             float: left;
             width: 40%;
