--- a/src/wpzoom-blocks/recipe-card/skins/new-design/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/new-design/style.scss
@@ -230,9 +230,8 @@
                 position: relative;
                 line-height: 1.8;
                 list-style: none;
-                min-height: 44px;
                 padding-left: 40px;
-                margin: 0 0 30px;
+                margin: 0 0 $grid-unit-20;
 
                 &::before {
                     @include direction-counter;
