--- a/src/wpzoom-blocks/recipe-card/skins/default/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/default/style.scss
@@ -89,12 +89,10 @@
                 display: inline-block;
                 vertical-align: middle;
                 margin-right: 10px;
-
                 .btn-pinit-link {
                     cursor: pointer;
                     display: block;
                     border-radius: 3px;
-                    height: 36px;
                     padding: 10px;
                     text-decoration: none;
                     font-size: 12px;
@@ -253,9 +251,8 @@
                 position: relative;
                 line-height: 1.8;
                 list-style: none;
-                min-height: 44px;
                 padding-left: 40px;
-                margin: 0 0 15px;
+                margin: 0 0 $grid-unit-20;
 
                 &::before {
                     @include direction-counter;
