--- a/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
+++ b/src/wpzoom-blocks/recipe-card/skins/accent-color-header/style.scss
@@ -9,6 +9,8 @@
             padding: $grid-unit-40;
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
+            background-color: $accent-color-header-bg-color;
+            color: $accent-color-header-text-color;
             .recipe-card-image-placeholder,
             .recipe-card-image-preview {
                 width: 200px;
@@ -26,6 +28,7 @@
                         height: auto;
                         margin: 0;
                         border-radius: $radius-round-rectangle-x2;
+                        border: 10px solid $accent-color-header-image-border-color;
                     }
                 }
             }
@@ -34,6 +37,7 @@
                 margin-top: 0;
                 margin-bottom: $grid-unit-10;
                 line-height: 1.8em;
+                color: $accent-color-header-title-color;
             }
             .recipe-card-summary {
                 margin-bottom: $grid-unit-20 !important;
@@ -52,7 +56,14 @@
                     margin-bottom: $grid-unit-20;
                 }
 
-                @include recipe-heading-metadata( $default-meta-color, $default-heading-color );
+                @include recipe-heading-metadata( $accent-color-header-text-color, $accent-color-header-meta-color );
+
+                .recipe-card-cuisine,
+                .recipe-card-difficulty {
+                    &::before {
+                        color: $accent-color-header-text-color;
+                    }
+                }
             }
         }
         .recipe-card-content-container {
@@ -122,12 +133,12 @@
                 font-style: normal;
                 text-decoration: none;
                 font-size: $ultra-small-font-size;
-                color: #fff;
                 line-height: $default-line-height;
                 border: none;
                 box-shadow: none;
                 cursor: pointer;
-                background-color: #C62122;
+                color: $accent-color-header-pinit-btn-text-color;
+                background-color: $accent-color-header-pinit-btn-bg-color;
                 .wpzoom-rcb-icon-pinit-link {
                     display: inline-block;
                     margin-right: $grid-unit;
@@ -140,6 +151,7 @@
                     font-size: $ultra-font-size;
                     margin-right: calc(#{ $grid-unit-15 / 2 });
                     vertical-align: middle;
+                    fill: $accent-color-header-pinit-btn-text-color;
                 }
                 .wpzoom-rcb-pinit-icon + span {
                     font-size: $small-font-size;
@@ -155,20 +167,19 @@
                 font-style: normal;
                 text-decoration: none;
                 font-size: $ultra-small-font-size;
-                color: #fff;
                 line-height: $default-line-height;
                 border: none;
                 box-shadow: none;
                 cursor: pointer;
-                color: $simple-primary-text-color;
-                background-color: $simple-primary-color;
+                color: $accent-color-header-print-btn-text-color;
+                background-color: $accent-color-header-print-btn-bg-color;
                 .wpzoom-rcb-icon-print-link {
                     display: inline-block;
                     margin-right: $grid-unit;
                     width: 16px;
                     height: 16px;
                     vertical-align: middle;
-                    fill: $simple-primary-text-color;
+                    fill: $accent-color-header-print-btn-text-color;
                 }
                 .wpzoom-rcb-print-icon {
                     font-size: $ultra-font-size;
@@ -183,6 +194,7 @@
         }
         .recipe-card-details {
             padding-bottom: 15px;
+            margin-bottom: 0;
             border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
             .details-items {
                 font-size: 0;
@@ -217,19 +229,19 @@
                         height: calc(#{ $icon-size } + #{ $icon-size / 2 });
                         line-height: calc(#{ $icon-size } + #{ $icon-size / 2 });
                         font-size: $main-font-size;
-                        color: $default-detail-icon-color;
+                        color: $accent-color-header-detail-icon-color;
                         .components-icon-button {
                             margin: 0 auto !important;
                         }
                     }
                     .detail-item-icon span {
-                        color: $default-detail-icon-color;
+                        color: $accent-color-header-detail-icon-color;
                         &::before {
                             font-size: $main-font-size;
                         }
                     }
                     .detail-item-icon svg {
-                        fill: $default-detail-icon-color;
+                        fill: $accent-color-header-detail-icon-color;
                     }
                 }
             }
@@ -237,10 +249,11 @@
 
         $selectors: 'ingredients-title', 'directions-title', 'video-title', 'notes-title';
 
-        @include recipe-sections-title( $default-heading-color, none, $selectors... );
+        @include recipe-sections-title( $dark-gray, none, $selectors... );
 
+        .ingredients-title,
         .directions-title {
-            margin-top: $grid-unit-15;
+            margin-top: $grid-unit-20;
         }
 
         .ingredients-list {
@@ -261,7 +274,7 @@
                 }
 
                 @include clear-after;
-                @include ingredient-tick( $default-tick-color, $default-ticked-color );
+                @include ingredient-tick( $accent-color-header-tick-color, $accent-color-header-ticked-color );
             }
             &.layout-2-columns {
                 columns: 2;
@@ -317,7 +330,7 @@
             border-top: 1px dashed rgba(0, 0, 0, 0.1);
 
             .recipe-card-notes-list {
-                @include recipe-notes-list( $coconut-cream, $coffee, $default-primary-color, $default-primary-text-color );
+                @include recipe-notes-list( $coconut-cream, $coffee, $accent-color-header-bg-color, $accent-color-header-text-color );
 
                 > li:last-child {
                     margin-bottom: 0;
