[WIP] Fixed some styles, Added box-shadow to recipe card

--- a/src/common.scss
+++ b/src/common.scss
@@ -27,7 +27,11 @@ $ultra-big-font-size: 32px;
  * Border radius.
  */
 $radius-round-rectangle-x1: 10px;
+$radius-round-rectangle-x15: 15px;
 $radius-round-rectangle-x2: 20px;
+$radius-round-rectangle-x25: 25px;
+$radius-round-rectangle-x3: 30px;
+$radius-round-rectangle-x35: 35px;
 $radius-round-rectangle-x4: 40px;
 
 @import './__mixins';
