--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -520,6 +520,7 @@
         padding: 15px;
         position: relative;
         padding-left: 6.2em;
+        overflow: hidden;
         .cta-brand-icon {
             position: absolute;
             left: -10px;
