[WIP] First attempt with comment rating

--- a/src/common.scss
+++ b/src/common.scss
@@ -35,4 +35,5 @@ $radius-round-rectangle-x35: 35px;
 $radius-round-rectangle-x4: 40px;
 
 @import './__mixins';
+@import './comment-rating';
 @import './amp';
