[WIP] Workflow to comment rating

--- a/src/comment-rating.scss
+++ b/src/comment-rating.scss
@@ -26,3 +26,14 @@
         }
     }
 }
+
+.wpzoom-rcb-comment-rating {
+    margin-bottom: 10px !important;
+    .wpzoom-rcb-comment-rating-stars {
+        padding: 0;
+        margin: 0;
+        > span {
+            font-size: 14px;
+        }
+    }
+}
