--- a/src/comment-rating.scss
+++ b/src/comment-rating.scss
@@ -27,6 +27,22 @@
     }
 }
 
+.comment-respond .comment-form {
+    .wpzoom-rcb-comment-rating-form {
+        > label {
+            display: block;
+        }
+        .wpzoom-rcb-comment-rating-stars {
+            label {
+                display: inline-block;
+                &[for="wpzoom-rcb-comment-rating-0"] {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
 .wpzoom-rcb-comment-rating {
     margin-bottom: 10px !important;
     .wpzoom-rcb-comment-rating-stars {
