[WIP] Added attribute to enable/disable masonry gallery
Init the masonry gallery only when the images are higher than number of columns

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -337,6 +337,10 @@
                     position: relative;
                     box-sizing: border-box;
                 }
+
+                &[data-gallery-masonry-grid="false"] .direction-step-gallery-item:not(:last-child) {
+                    margin-right: $grid-unit;
+                }
             }
 
             &.is-loading {
