[WIP] Align top gallery items which are non masonry

--- a/src/wpzoom-blocks/recipe-card/style.scss
+++ b/src/wpzoom-blocks/recipe-card/style.scss
@@ -328,6 +328,7 @@
                 &:not(.masonry) {
                     display: flex;
                     flex-wrap: wrap;
+                    align-items: flex-start;
                 }
 
                 .direction-step-gallery-item {
