--- a/src/wpzoom-blocks/nutrition/style.scss
+++ b/src/wpzoom-blocks/nutrition/style.scss
@@ -14,7 +14,7 @@
         margin: 0 0 2em;
         color: #222;
 
-        h2 {
+        .nutrition-facts-title {
             font-size: 2.4em;
             line-height: 1;
             letter-spacing: 0;
